# psql-cli

./: .gitignore  README.md  pshs.spec  pyproject.toml  requirements.txt
src/: cloudsql_admin_collector.py  cloudsql_postgres.py  config.py  entry.py  g_monitoring_collector.py  hotspots_report.py  metrics.py  pshs.py  utils.py
src/figure_logic/: cpu.py  disk_related.py  general_related.py  hotspots_report_template.html  network_related.py  sql_related.py  transaction_related.py  wal_related.py
src/psql_hotspots.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
